[gd_scene load_steps=9 format=3 uid="uid://hm6cdtmc4b0w"]

[ext_resource type="Script" uid="uid://c2rc40onox5tb" path="res://Scripts/Simon_Start_Button.gd" id="1_hj50x"]
[ext_resource type="Texture2D" uid="uid://cnoueyhpexnon" path="res://sprites/Objetos/IceCreamAnim1.png" id="2_hj50x"]
[ext_resource type="Texture2D" uid="uid://d00avm2b5lcvo" path="res://sprites/Objetos/IceCreamRed.png" id="2_qc2h6"]
[ext_resource type="Texture2D" uid="uid://co3yu72s7ume5" path="res://sprites/Objetos/IceCreamAnim2.png" id="3_qc2h6"]
[ext_resource type="PackedScene" uid="uid://ch6elmdrwvdup" path="res://Interaction Components/interactable.tscn" id="4_5pp4c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pp4c"]
size = Vector2(14, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_0l6xg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hj50x")
}, {
"duration": 1.0,
"texture": ExtResource("3_qc2h6")
}],
"loop": true,
"name": &"efeito",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hj50x"]
height = 88.0

[node name="Sorvete-Interactable" type="StaticBody2D"]
script = ExtResource("1_hj50x")

[node name="CollisionShape1" type="CollisionShape2D" parent="."]
position = Vector2(-32, -2)
shape = SubResource("RectangleShape2D_5pp4c")

[node name="CollisionShape2" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_5pp4c")

[node name="CollisionShape3" type="CollisionShape2D" parent="."]
position = Vector2(32, -2)
shape = SubResource("RectangleShape2D_5pp4c")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(1, -11)
scale = Vector2(1, 0.997)

[node name="Sprite1" type="Sprite2D" parent="Sprites"]
position = Vector2(-32, 0)
texture = ExtResource("2_qc2h6")

[node name="Sprite2" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_qc2h6")

[node name="Sprite3" type="Sprite2D" parent="Sprites"]
position = Vector2(32, 0)
texture = ExtResource("2_qc2h6")

[node name="Animation" type="Node2D" parent="."]
position = Vector2(1, -11)

[node name="AnimatedSprite1" type="AnimatedSprite2D" parent="Animation"]
position = Vector2(-32, 0)
sprite_frames = SubResource("SpriteFrames_0l6xg")
animation = &"efeito"

[node name="AnimatedSprite2" type="AnimatedSprite2D" parent="Animation"]
sprite_frames = SubResource("SpriteFrames_0l6xg")
animation = &"efeito"

[node name="AnimatedSprite3" type="AnimatedSprite2D" parent="Animation"]
position = Vector2(32, 0)
sprite_frames = SubResource("SpriteFrames_0l6xg")
animation = &"efeito"

[node name="Interactable" parent="." instance=ExtResource("4_5pp4c")]
interact_name = "E para Iniciar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_hj50x")
